--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="intr">
 			<span class="avtar"></span>
 			<p class="peointr">我叫向荣，一名铁道工程技术大二的学生。</p>
-			<p class="newpeointr">他一个性格开朗，健谈，常常面带笑容，喜欢以微笑待人，喜欢把自己的快乐与所有的人分享。<br>
+			<p class="newpeointr">一个性格开朗，健谈，常常面带笑容，喜欢以微笑待人，喜欢把自己的快乐与所有的人分享。<br>
 				能很好的处理好朋友之间的关系，爱好十分广泛，喜欢交朋友、听音乐、电脑、各种体育运动。
 			</p>
 		</div>
