--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<div class="tab-pane active" id="home">
 					<p class="text">曾就职于惠州民爆电技术有限公司</p>
 					<p class="text">工作时间：2021年4月 – 2021年7月</p>
-					<p class="text">他能熟练使用烙铁热风枪，能按照工艺要求完成装配产品焊锡作业，会处理焊锡相关异常，解决现场问题。 </p>
+					<p class="text">能熟练使用烙铁热风枪，能按照工艺要求完成装配产品焊锡作业，会处理焊锡相关异常，解决现场问题。 </p>
 				</div>
 				<div class="tab-pane" id="profile">
 					<p class="text">工程制图CAD</p>
@@ -104,7 +104,7 @@
 			</div>
 		</div>
 
-		<div class="title" id="part4">他的联系方式</div>
+		<div class="title" id="part4">联系方式</div>
 		<div class="content">
 			<div class="newdivone">
 				<p class="text2">
